Разметка главной страницы

--- a/index.html
+++ b/index.html
@@ -2,11 +2,110 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Глейси</title>
+    <title>Gllasy</title>
+
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
-
-  </body>
+   <header class="main-header">
+     <nav class="main-navigation">
+<img src="img/index-logo.svg" width="154" height="" alt="Логотип магазина мороженного "Gllasy"">
+       <ul class="site-navigation">
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="price.html">Доставка и оплата</a></li>
+          <li><a href="aboutus.html">Информация о нас</a></li>
+      </ul>
+      <ul class="user-navigation">
+        <li class="login-link">Вход</li>
+        <li class="bag-link">Корзина</li>
+        <li class="contacts">с 10 до 20, ежедневно</li>
+        <li class="number">8 812 450-25-25</li>
+      </ul>
+    </nav>
+   </header>
+    <main class="container">
+   <section class="slider">
+     <figure class="slider-content">
+       <a href="#"><img src="img/ice-cream-1.jpg" width="1200" height="2400" alt="Фон-1"></a>
+     </figure>
+     <span class="button background-1-radio-button"></span>
+     <span class="button background-2-radio-button"></span>
+     <span class="button background-3-radio-button"></span>
+     <span class="button get-all">Давайте оба!</span>
+   </section>
+<section class="special-offer"
+     <h2>Малинка даром!</h2>
+       <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+        <span class="button get-raspberries">Хочу варенье!</span>
+     <h2>Шоколадки даром!</h2>
+       <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+        <span class="button get-chocolate">Хочу шоколадки!</span>
+   </section>
+   <section class="best-choise">
+     <ul>
+       <li>310 р/кг</li>
+       <li>Сливочное с апельсиновым джемом и цитрусовой стружкой</li>
+     </ul>
+     <ul>
+       <li>380 р/кг</li>
+       <li>Сливочно-кофейное с кусочками шоколада</li>
+     </ul>
+     <ul>
+       <li>355 р/кг</li>
+       <li>Сливочно-клубничное с присыпкой из белого шоколада</li>
+     </ul>
+     <ul>
+       <li>415 р/кг</li>
+       <li>Сливочное крем-брюле с карамельной подливкой</li>
+     </ul>
+   </section>
+   <section>
+     <h3>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
+      <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+ <p>
+Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья. </p>
+<p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+<p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+</section>
+ <section>
+   <h4>Новое в нашем блоге</h4>
+   <a href="blog.html">10 способов сервировки
+фруктовых щербетов к
+столу</a>
+</section>
+<section>
+  <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
+   <!-- Здесь будет форма -->
+ </section>
+<div>
+  <p>Адрес главного офиса
+и офлайн-магазина:<br>
+ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
+<p>Для заказов по телефону:<br>
+  8 812 450-25-25
+(с 10 до 20 ежедневно)</p>
+<!-- Здесь будет форма -->
+</div>
+</main>
+<footer class="main-footer">
+  <div class="footer-social">
+        <ul>
+          <li><a class="social-button" href="#">Твиттер</a></li>
+          <li><a class="social-button" href="#">Инстаграм</a></li>
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">Вконтакте</a></li>
+        </ul>
+      </div>
+      <div class="footer-about">
+              <ul>
+                <li><a class="for-providers" href="#">Для поставщиков</a></li>
+                <li><a class="about-production" href="#">О производстве</a></li>
+                <li><a class="our-documents" href="#">Наши документы</a></li>
+                <li><a class="environmental standards" href="#">Экологические стандарты</a></li>
+              </ul>
+            </div>
+ <p>
+   <a class="button" href="https://htmlacademy.ru">Сделано в HTML Academy © 2017</a>
+ </p>
+</footer>
+     </body>
 </html>
