--- a/index.html
+++ b/index.html
@@ -8,35 +8,38 @@
   <body>
    <header class="main-header">
      <nav class="main-navigation">
-<img src="img/index-logo.svg" width="154" height="" alt="Логотип магазина мороженного "Gllasy"">
+  <img src="img/index-logo.svg" width="154" height="" alt="Логотип магазина мороженного Gllasy">
        <ul class="site-navigation">
           <li><a href="catalog.html">Каталог</a></li>
           <li><a href="price.html">Доставка и оплата</a></li>
           <li><a href="aboutus.html">Информация о нас</a></li>
       </ul>
-      <ul class="user-navigation">
-        <li class="login-link">Вход</li>
-        <li class="bag-link">Корзина</li>
-        <li class="contacts">с 10 до 20, ежедневно</li>
-        <li class="number">8 812 450-25-25</li>
+      <ul class="user-n
+      avigation">
+        <li><a href="#">Вход</a></li>
+        <li><a href="#">Корзина</a></li>
       </ul>
     </nav>
+    <div>
+      <p class="time">с 10 до 20, ежедневно</p>
+      <p class="number">8 812 450-25-25</p>
+    </div>
    </header>
     <main class="container">
    <section class="slider">
      <figure class="slider-content">
        <a href="#"><img src="img/ice-cream-1.jpg" width="1200" height="2400" alt="Фон-1"></a>
      </figure>
-     <span class="button background-1-radio-button"></span>
-     <span class="button background-2-radio-button"></span>
-     <span class="button background-3-radio-button"></span>
+     <span class="button background-1-radio-button"><a href="#"></a></span>
+     <span class="button background-2-radio-button"><a href="#"></a></span>
+     <span class="button background-3-radio-button"><a href="#"></a></span>
      <span class="button get-all">Давайте оба!</span>
    </section>
-<section class="special-offer"
-     <h2>Малинка даром!</h2>
+<section class="special-offer">
+     <h2><a href="#">Малинка даром!</a></h2>
        <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
         <span class="button get-raspberries">Хочу варенье!</span>
-     <h2>Шоколадки даром!</h2>
+     <h2><a href="#">Шоколадки даром!</a></h2>
        <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
         <span class="button get-chocolate">Хочу шоколадки!</span>
    </section>
