--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
    <header class="main-header">
      <nav class="main-navigation">
-  <img src="img/index-logo.svg" width="154" height="" alt="Логотип магазина мороженного Gllasy">
+  <img src="img/index-logo.svg" width="154" height="64" alt="Логотип магазина мороженного «Gllasy»">
        <ul class="site-navigation">
           <li><a href="catalog.html">Каталог</a></li>
           <li><a href="price.html">Доставка и оплата</a></li>
@@ -110,5 +110,5 @@
    <a class="button" href="https://htmlacademy.ru">Сделано в HTML Academy © 2017</a>
  </p>
 </footer>
-     </body>
+</body>
 </html>
