--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
           <li><a href="price.html">Доставка и оплата</a></li>
           <li><a href="aboutus.html">Информация о нас</a></li>
       </ul>
-      <ul class="user-n
-      avigation">
+      <ul class="user-navigation">
         <li><a href="#">Вход</a></li>
         <li><a href="#">Корзина</a></li>
       </ul>
@@ -28,20 +27,20 @@
     <main class="container">
    <section class="slider">
      <figure class="slider-content">
-       <a href="#"><img src="img/ice-cream-1.jpg" width="1200" height="2400" alt="Фон-1"></a>
+       <a href="#"><img src="img/ice-cream-1.png" width="1045" height="881" alt="Фон-1"></a>
      </figure>
      <span class="button background-1-radio-button"><a href="#"></a></span>
      <span class="button background-2-radio-button"><a href="#"></a></span>
      <span class="button background-3-radio-button"><a href="#"></a></span>
-     <span class="button get-all">Давайте оба!</span>
+     <a href="#">Давайте оба!</a>
    </section>
 <section class="special-offer">
-     <h2><a href="#">Малинка даром!</a></h2>
+     <h2><img src="img/raspberries.png">Малинка даром!</h2>
        <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-        <span class="button get-raspberries">Хочу варенье!</span>
+        <a href="#">Хочу варенье!</a>
      <h2><a href="#">Шоколадки даром!</a></h2>
        <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-        <span class="button get-chocolate">Хочу шоколадки!</span>
+        <a href="#">Хочу шоколадки!</a>
    </section>
    <section class="best-choise">
      <ul>
