--- a/catalog.html
+++ b/catalog.html
@@ -43,7 +43,7 @@
          <li class="catalog-item">
            <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
            <p>
-              <img src="img/product-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+              <img src="img/product-1.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
             </p>
             <b>310₽/кг</b>
            <a class="button" href="#">Быстрый просмотр</a>
@@ -51,7 +51,7 @@
          <li class="catalog-item">
            <h3>Сливочно-кофейное с кусочками шоколада</h3>
            <p>
-              <img src="img/product-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+              <img src="img/product-2.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
             </p>
             <b>380₽/кг</b>
            <a class="button" href="#">Быстрый просмотр</a>
@@ -59,7 +59,7 @@
          <li class="catalog-item">
            <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
            <p>
-              <img src="img/product-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+              <img src="img/product-3.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
             </p>
             <b>355₽/кг</b>
            <a class="button" href="#">Быстрый просмотр</a>
@@ -67,7 +67,7 @@
          <li class="catalog-item">
            <h3>Сливочное крем-брюле с карамельной подливой</h3>
            <p>
-              <img src="img/product-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливой">
+              <img src="img/product-4.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливой">
             </p>
             <b>415₽/кг</b>
            <a class="button" href="#">Быстрый просмотр</a>
@@ -75,7 +75,7 @@
          <li class="catalog-item">
            <h3>Сливочное с брусничным джемом</h3>
            <p>
-              <img src="img/product-5.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
+              <img src="img/product-5.png" width="267" height="267" alt="Сливочное с брусничным джемом">
             </p>
             <b>325₽/кг</b>
            <a class="button" href="#">Быстрый просмотр</a>
@@ -83,7 +83,7 @@
          <li class="catalog-item">
            <h3>Сливочно-черничное с цельными ягодами черники</h3>
            <p>
-              <img src="img/product-6.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
+              <img src="img/product-6.png" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
             </p>
             <b>410₽/кг</b>
            <a class="button" href="#">Быстрый просмотр</a>
@@ -91,7 +91,7 @@
          <li class="catalog-item">
            <h3>Сливочно-лимонное с карамельной присыпкой</h3>
            <p>
-              <img src="img/product-7.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
+              <img src="img/product-7.png" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
             </p>
             <b>375₽/кг</b>
            <a class="button" href="#">Быстрый просмотр</a>
@@ -99,7 +99,7 @@
          <li class="catalog-item">
            <h3>Сливочное с шоколадной стружкой</h3>
            <p>
-              <img src="img/product-8.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
+              <img src="img/product-8.png" width="267" height="267" alt="Сливочное с шоколадной стружкой">
             </p>
             <b>320₽/кг</b>
            <a class="button" href="#">Быстрый просмотр</a>
@@ -107,7 +107,7 @@
          <li class="catalog-item">
            <h3>Сливочно-ванильное с кусочками шоколада</h3>
            <p>
-              <img src="img/product-9.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
+              <img src="img/product-9.png" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
             </p>
             <b>440₽/кг</b>
            <a class="button" href="#">Быстрый просмотр</a>
@@ -115,7 +115,7 @@
          <li class="catalog-item">
            <h3>Сливочноe с ментоловым сиропом</h3>
            <p>
-              <img src="img/product-10.jpg" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
+              <img src="img/product-10.png" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
             </p>
             <b>435₽/кг</b>
            <a class="button" href="#">Быстрый просмотр</a>
@@ -123,7 +123,7 @@
          <li class="catalog-item">
            <h3>Сливочное с кусочками черного шоколада</h3>
            <p>
-              <img src="img/product-11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
+              <img src="img/product-11.png" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
             </p>
             <b>435₽/кг</b>
            <a class="button" href="#">Быстрый просмотр</a>
@@ -131,7 +131,7 @@
          <li class="catalog-item">
            <h3>Сливочное с мятным сиропом</h3>
            <p>
-              <img src="img/product-12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
+              <img src="img/product-12.png" width="267" height="267" alt="Сливочное с мятным сиропом">
             </p>
             <b>435₽/кг</b>
            <a class="button" href="#">Быстрый просмотр</a>
