--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
    <header class="main-header">
      <nav class="main-navigation">
-  <img src="img/index-logo.svg" width="154" height="64" alt="Логотип магазина мороженного «Gllasy»">
+  <img src="img/logo.svg" width="154" height="64" alt="Логотип магазина мороженного «Gllasy»">
        <ul class="site-navigation">
           <li><a href="catalog.html">Каталог</a></li>
           <li><a href="price.html">Доставка и оплата</a></li>
@@ -35,29 +35,29 @@
      <a href="#">Давайте оба!</a>
    </section>
 <section class="special-offer">
-     <h2><img src="img/raspberries.png">Малинка даром!</h2>
+     <h2>Малинка даром!</h2>
        <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
         <a href="#">Хочу варенье!</a>
-     <h2><a href="#">Шоколадки даром!</a></h2>
+     <h2>Шоколадки даром!</h2>
        <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
         <a href="#">Хочу шоколадки!</a>
    </section>
    <section class="best-choise">
      <ul>
        <li>310 р/кг</li>
-       <li>Сливочное с апельсиновым джемом и цитрусовой стружкой</li>
+       <li><a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></li>
      </ul>
      <ul>
        <li>380 р/кг</li>
-       <li>Сливочно-кофейное с кусочками шоколада</li>
+       <li><a href="#">Сливочно-кофейное с кусочками шоколада</a></li>
      </ul>
      <ul>
        <li>355 р/кг</li>
-       <li>Сливочно-клубничное с присыпкой из белого шоколада</li>
+       <li><a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a></li>
      </ul>
      <ul>
        <li>415 р/кг</li>
-       <li>Сливочное крем-брюле с карамельной подливкой</li>
+       <li><a href="#">Сливочное крем-брюле с карамельной подливкой</a></li>
      </ul>
    </section>
    <section>
