Подключил контентное изображение

--- a/index.html
+++ b/index.html
@@ -43,21 +43,27 @@
         <a href="#">Хочу шоколадки!</a>
    </section>
    <section class="best-choise">
-     <ul>
-       <li>310 р/кг</li>
-       <li><a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></li>
-     </ul>
-     <ul>
-       <li>380 р/кг</li>
-       <li><a href="#">Сливочно-кофейное с кусочками шоколада</a></li>
-     </ul>
-     <ul>
-       <li>355 р/кг</li>
-       <li><a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a></li>
-     </ul>
-     <ul>
-       <li>415 р/кг</li>
-       <li><a href="#">Сливочное крем-брюле с карамельной подливкой</a></li>
+    <ul>
+      <li>
+        <p>310 р/кг</p>
+        <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+        <img src="img/product-1.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+     </li>
+     <li>
+       <p>380 р/кг</p>
+       <a href="#">Сливочно-кофейное с кусочками шоколада</a>
+       <img src="img/product-2.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+     </li>
+     <li>
+       <p>355 р/кг</p>
+       <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+       <img src="img/product-3.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+     </li>
+    <li>
+       <p>415 р/кг</p>
+       <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+       <img src="img/product-4.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливой">
+     </li>
      </ul>
    </section>
    <section>
