--- a/index.html
+++ b/index.html
@@ -15,8 +15,32 @@
           <li><a href="aboutus.html">Информация о нас</a></li>
       </ul>
       <ul class="user-navigation">
+        <li>
+          <section class="dropsearch">
+            <form class="search" action="https://echo.htmlacademy.ru/" method="get">
+              <label class="visually-hidden" for="search-field">Поиск по сайту</label>
+              <input type="text" name="search" id="search-field" value="Что ищем?">
+            </form>
+        </li>
         <li class="login-link">
           <a class="login-link" href="login-link.html">Вход</a>
+          <section class="droplist">
+           <form class="login-form" action="https://echo.htmlacademy.ru/" method="post">
+             <p>
+               <label class="visually-hidden" for="login-email-field">Введите свой email</label>
+               <input type="text" id="login-email-field" name="login-email" value="Электронная почта">
+             </p>
+             <p>
+               <label class="visually-hidden" for="password-field">Введите свой пароль</label>
+               <input type="password" id="password-field" name="password" value="Пароль">
+             </p>
+             <button class="button" type="submit">Войти</button>
+             <p>
+               <a class="restore" href="restore-password.html">Забыли пароль?</a>
+               <a class="new-registration" href="new-registration.html">Новая регистрация</a>
+             </p>
+           </form>
+         </section>
         </li>
         <li><a href="bag.html">Корзина</a></li>
       </ul>
@@ -36,7 +60,7 @@
      <span class="button background-3-radio-button"><a href="#"></a></span>
      <a href="#">Давайте оба!</a>
    </section>
-<section class="special-offer">
+   <section class="special-offer">
      <h2>Малинка даром!</h2>
        <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
         <a href="#">Хочу варенье!</a>
@@ -84,9 +108,9 @@
 </section>
 <section>
   <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
-  <form action="https://#" method="post">
-    <label class="visually-hidden" for="emeil-adress">Электронная почта</label>
-      <input type="text" id="email-adress" name="email-adress" value="Электронная почта">
+  <form action="https://echo.htmlacademy.ru/" method="post">
+    <label class="visually-hidden" for="emeil-field">Электронная почта</label>
+      <input type="text" id="email-field" name="email-adress" value="Электронная почта">
       <button class="button" type="submit">Отправить</button>
   </form>
  </section>
@@ -99,7 +123,7 @@
 <p>Для заказов по телефону:<br>
   8 812 450-25-25
 (с 10 до 20 ежедневно)</p>
- <form action="https://#" method="post">
+ <form action="https://echo.htmlacademy.ru/" method="post">
    <button class="button" type="button">Форма обратной связи</button>
  </form>
 </div>
@@ -125,38 +149,17 @@
    <a class="button" href="https://htmlacademy.ru">Сделано в HTML Academy © 2017</a>
  </p>
 </footer>
- <section class="modal modal-login">
-  <form class="login-form" action="https://#" method="post">
-    <p>
-      <label class="visually-hidden" for="login-email">Введите свой email</label>
-      <input type="text" id="login-email" name="login-email" value="Электронная почта">
-    </p>
-    <p>
-      <label class="visually-hidden" for="password">Введите свой пароль</label>
-      <input type="password" id="password" name="password" value="Пароль">
-    </p>
-    <button class="button" type="submit">Войти</button>
-    <p>
-      <a class="restore" href="restore-password.html">Забыли пароль?</a>
-      <a class="new-registration" href="new-registration.html">Новая регистрация</a>
-    </p>
-  </form>
-</section>
-<section class="modal-search">
-  <form class="search" action="https://#" method="get">
-    <label class="visually-hidden" for="search">Поиск по сайту</label>
-    <input type="text" name="search" id="search" value="Что ищем?">
-  </form>
+
 </section>
 <section class="feedback">
   <h2>Мы обязательно вам ответим!</h2>
-  <form class="feedback" action="https://#" method="post">
-    <label class="visually-hidden" for="name">Ваше имя</label>
-    <input type="text" name="name" id="name" value="Как вас зовут?"><br>
-    <label class="visually-hidden" for="adress-to-feedback">Ваша почта для ответа</label>
-    <input type="text" name="adress-to-feedback" id="adress-to-feedback" value="Ваша почта для ответа?"><br>
-    <label class="visually-hidden" for="commet">Ваше сообщение</label>
-    <textarea name="message" id="comment" rows="5">Напишите что-нибудь...</textarea><br>
+  <form class="feedback" action="https://echo.htmlacademy.ru/" method="post">
+    <label class="visually-hidden" for="name-field">Ваше имя</label>
+    <input type="text" name="name" id="name-field" value="Как вас зовут?"><br>
+    <label class="visually-hidden" for="email-feedback">Ваша почта для ответа</label>
+    <input type="text" name="adress-to-feedback" id="email-feedback" value="Ваша почта для ответа?"><br>
+    <label class="visually-hidden" for="commet-field">Ваше сообщение</label>
+    <textarea name="message" id="comment-field" rows="5">Напишите что-нибудь...</textarea><br>
     <button class="button" type="submit">Отправить</button>
   </form>
 </section>
