--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Gllasy</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 
+    <link href="css/normalize.css" rel="stylesheet">
   </head>
   <body>
    <header class="main-header">
@@ -71,28 +73,28 @@
    <section class="best-choise">
     <ul>
       <li>
-        <p>310 р/кг</p>
+        <p>310 р<span>/кг</span></p>
         <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
         <img src="img/product-1.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
      </li>
      <li>
-       <p>380 р/кг</p>
+       <p>380 р<span>/кг</span></p>
        <a href="#">Сливочно-кофейное с кусочками шоколада</a>
        <img src="img/product-2.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
      </li>
      <li>
-       <p>355 р/кг</p>
+       <p>355 р<span>/кг</span></p>
        <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
        <img src="img/product-3.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
      </li>
     <li>
-       <p>415 р/кг</p>
+       <p>415 р<span>/кг</span></p>
        <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
        <img src="img/product-4.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливой">
      </li>
      </ul>
    </section>
-   <section>
+   <section class="about-waffle">
      <h3>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
       <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
  <p>
@@ -100,13 +102,11 @@
 <p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
 <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
 </section>
- <section>
+ <section class="ways-fruit">
    <h4>Новое в нашем блоге</h4>
-   <a href="blog.html">10 способов сервировки
-фруктовых щербетов к
-столу</a>
+   <a href="blog.html">10 способов сервировки фруктовых щербетов к столу</a>
 </section>
-<section>
+<section class="sweet-subscribe">
   <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
   <form action="https://echo.htmlacademy.ru/" method="post">
     <label class="visually-hidden" for="emeil-field">Электронная почта</label>
@@ -114,14 +114,15 @@
       <button class="button" type="submit">Отправить</button>
   </form>
  </section>
- <div>
+ <div class="map">
    <img src="img/map.jpg" width="1200" height="430" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург">
-<div>
+ </div>
+  <div class="contacts-info">
   <p>Адрес главного офиса
 и офлайн-магазина:<br>
-ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
+<span>ул. Большая Конюшенная 19/8, Санкт-Петербург</span></p>
 <p>Для заказов по телефону:<br>
-  8 812 450-25-25
+  <span>8 812 450-25-25</span>
 (с 10 до 20 ежедневно)</p>
  <form action="https://echo.htmlacademy.ru/" method="post">
    <button class="button" type="button">Форма обратной связи</button>
@@ -138,15 +139,17 @@
         </ul>
       </div>
       <div class="footer-about">
-              <ul>
+            <ul>
                 <li><a class="for-providers" href="forproviders.html">Для поставщиков</a></li>
                 <li><a class="about-production" href="about.html">О производстве</a></li>
                 <li><a class="our-documents" href="documents.html">Наши документы</a></li>
                 <li><a class="environmental standards" href="standards.html">Экологические стандарты</a></li>
-              </ul>
-            </div>
+            </ul>
+      </div>
  <p>
-   <a class="button" href="https://htmlacademy.ru">Сделано в HTML Academy © 2017</a>
+   Сделано в
+   <a class="made-by" href="https://htmlacademy.ru">HTML Academy</a>
+   © 2017
  </p>
 </footer>
 
