--- a/catalog.html
+++ b/catalog.html
@@ -17,12 +17,13 @@
           <li><a href="aboutus.html">Информация о нас</a></li>
       </ul>
       <ul class="user-navigation">
-        <li>
+        <li><a href="#"></a>
           <section class="dropsearch">
             <form class="search" action="https://echo.htmlacademy.ru/" method="get">
               <label class="visually-hidden" for="search-field">Поиск по сайту</label>
               <input type="text" name="search" id="search-field" value="Что ищем?">
-            </form>
+           </form>
+         </section>
         </li>
         <li><a href="#">Вход</a>
           <section class="droplist">
@@ -71,10 +72,10 @@
           <label for="price-field">Цена: 100 руб. - 500 руб.</label>
           <input type="range" id="price-field" name="price" min="100" max="500"/><br>
           <label for="fat">Жирность:</label>
-          <p><input type="radio" id="fat" name="fat" value="0%">0%</p>
-          <p><input type="radio" id="fat" name="fat" value="10%">до 10%</p>
-          <p><input type="radio" id="fat" name="fat" value="30%">до 30%</p>
-          <p><input type="radio" id="fat" name="fat" value="30%+">выше 30%</p>
+          <p><input type="radio" id="fat-0" name="fat" value="0%">0%</p>
+          <p><input type="radio" id="fat-10" name="fat" value="10%">до 10%</p>
+          <p><input type="radio" id="fat-under30" name="fat" value="30%">до 30%</p>
+          <p><input type="radio" id="fat-30" name="fat" value="30%+">выше 30%</p>
           <p>Наполнители:</p>
           <label for="chocolate-field">шоколадные</label>
           <input type="checkbox" name="chocolate" id="chocolate-field" checked>
@@ -88,95 +89,95 @@
           <input type="checkbox" name="jams" id="jams-field">
         </form>
       </section>
-      <section class="catalog">
+      <section class="best-choise">
        <h2 class="visually-hidden">Список видов мороженого</h2>
        <ul class="catalog-list">
          <li class="catalog-item">
-           <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+           <h2>Сливочное с апельсиновым джемом и цитрусовой стружкой</h2>
            <p>
               <img src="img/product-1.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
             </p>
-            <b>310₽/кг</b>
+            <p>310₽<span>/кг</span></p>
            <a class="button" href="#">Быстрый просмотр</a>
          </li>
          <li class="catalog-item">
-           <h3>Сливочно-кофейное с кусочками шоколада</h3>
+           <h2>Сливочно-кофейное с кусочками шоколада</h2>
            <p>
               <img src="img/product-2.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
             </p>
-            <b>380₽/кг</b>
+            <p>380₽<span>/кг</span></p>
            <a class="button" href="#">Быстрый просмотр</a>
          </li>
          <li class="catalog-item">
-           <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
+           <h2>Сливочно-клубничное с присыпкой из белого шоколада</h2>
            <p>
               <img src="img/product-3.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
             </p>
-            <b>355₽/кг</b>
+            <p>355₽<span>/кг</span></p>
            <a class="button" href="#">Быстрый просмотр</a>
          </li>
          <li class="catalog-item">
-           <h3>Сливочное крем-брюле с карамельной подливой</h3>
+           <h2>Сливочное крем-брюле с карамельной подливой</h2>
            <p>
               <img src="img/product-4.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливой">
             </p>
-            <b>415₽/кг</b>
+            <p>415₽<span>/кг</span></p>
            <a class="button" href="#">Быстрый просмотр</a>
          </li>
          <li class="catalog-item">
-           <h3>Сливочное с брусничным джемом</h3>
+           <h2>Сливочное с брусничным джемом</h2>
            <p>
               <img src="img/product-5.png" width="267" height="267" alt="Сливочное с брусничным джемом">
             </p>
-            <b>325₽/кг</b>
+            <p>325₽<span>/кг</span></p>
            <a class="button" href="#">Быстрый просмотр</a>
          </li>
          <li class="catalog-item">
-           <h3>Сливочно-черничное с цельными ягодами черники</h3>
+           <h2>Сливочно-черничное с цельными ягодами черники</h2>
            <p>
               <img src="img/product-6.png" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
             </p>
-            <b>410₽/кг</b>
+            <p>410₽<span>/кг</span></p>
            <a class="button" href="#">Быстрый просмотр</a>
          </li>
          <li class="catalog-item">
-           <h3>Сливочно-лимонное с карамельной присыпкой</h3>
+           <h2>Сливочно-лимонное с карамельной присыпкой</h2>
            <p>
               <img src="img/product-7.png" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
             </p>
-            <b>375₽/кг</b>
+            <p>375₽<span>/кг</span></p>
            <a class="button" href="#">Быстрый просмотр</a>
          </li>
          <li class="catalog-item">
-           <h3>Сливочное с шоколадной стружкой</h3>
+           <h2>Сливочное с шоколадной стружкой</h2>
            <p>
               <img src="img/product-8.png" width="267" height="267" alt="Сливочное с шоколадной стружкой">
             </p>
-            <b>320₽/кг</b>
+            <p>320₽<span>/кг</span></p>
            <a class="button" href="#">Быстрый просмотр</a>
          </li>
          <li class="catalog-item">
-           <h3>Сливочно-ванильное с кусочками шоколада</h3>
+           <h2>Сливочно-ванильное с кусочками шоколада</h2>
            <p>
               <img src="img/product-9.png" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
             </p>
-            <b>440₽/кг</b>
+            <p>440₽<span>/кг</span></p>
            <a class="button" href="#">Быстрый просмотр</a>
          </li>
          <li class="catalog-item">
-           <h3>Сливочноe с ментоловым сиропом</h3>
+           <h2>Сливочноe с ментоловым сиропом</h2>
            <p>
               <img src="img/product-10.png" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
             </p>
-            <b>435₽/кг</b>
+            <p>435₽<span>/кг</span></p>
            <a class="button" href="#">Быстрый просмотр</a>
          </li>
          <li class="catalog-item">
-           <h3>Сливочное с кусочками черного шоколада</h3>
+           <h2>Сливочное с кусочками черного шоколада</h2>
            <p>
               <img src="img/product-11.png" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
             </p>
-            <b>435₽/кг</b>
+            <p>435₽<span>/кг</span></b>
            <a class="button" href="#">Быстрый просмотр</a>
          </li>
          <li class="catalog-item">
@@ -184,7 +185,7 @@
            <p>
               <img src="img/product-12.png" width="267" height="267" alt="Сливочное с мятным сиропом">
             </p>
-            <b>435₽/кг</b>
+            <p>435₽<span>/кг</span></p>
            <a class="button" href="#">Быстрый просмотр</a>
          </li>
        </ul>
