--- a/catalog.html
+++ b/catalog.html
@@ -71,7 +71,7 @@
           </select>
           <label for="price-field">Цена: 100 руб. - 500 руб.</label>
           <input type="range" id="price-field" name="price" min="100" max="500"/><br>
-          <label for="fat">Жирность:</label>
+          <p>Жирность:</p>
           <p><input type="radio" id="fat-0" name="fat" value="0%">0%</p>
           <p><input type="radio" id="fat-10" name="fat" value="10%">до 10%</p>
           <p><input type="radio" id="fat-under30" name="fat" value="30%">до 30%</p>
@@ -177,7 +177,7 @@
            <p>
               <img src="img/product-11.png" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
             </p>
-            <p>435₽<span>/кг</span></b>
+            <p>435₽<span>/кг</span></p>
            <a class="button" href="#">Быстрый просмотр</a>
          </li>
          <li class="catalog-item">
