--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Gllasy</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
-
     <link href="css/normalize.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
    <header class="main-header">
@@ -23,6 +23,7 @@
               <label class="visually-hidden" for="search-field">Поиск по сайту</label>
               <input type="text" name="search" id="search-field" value="Что ищем?">
             </form>
+          </section>
         </li>
         <li class="login-link">
           <a class="login-link" href="login-link.html">Вход</a>
@@ -152,8 +153,6 @@
    © 2017
  </p>
 </footer>
-
-</section>
 <section class="feedback">
   <h2>Мы обязательно вам ответим!</h2>
   <form class="feedback" action="https://echo.htmlacademy.ru/" method="post">
@@ -161,7 +160,7 @@
     <input type="text" name="name" id="name-field" value="Как вас зовут?"><br>
     <label class="visually-hidden" for="email-feedback">Ваша почта для ответа</label>
     <input type="text" name="adress-to-feedback" id="email-feedback" value="Ваша почта для ответа?"><br>
-    <label class="visually-hidden" for="commet-field">Ваше сообщение</label>
+    <label class="visually-hidden" for="comment-field">Ваше сообщение</label>
     <textarea name="message" id="comment-field" rows="5">Напишите что-нибудь...</textarea><br>
     <button class="button" type="submit">Отправить</button>
   </form>
